# src/utils/validations.js
@@ -2,6 +2,7 @@ const { body, param } = require("express-validator");
 const bcrypt = require("bcrypt");
 const { UserModel } = require("../models/user.model");
 const { RoomModel } = require("../models/room.model");
+const { AutoEncryptionLoggerLevel, ObjectId } = require("mongodb");
 const userModel = new UserModel();
 const roomModel = new RoomModel();
 
@@ -116,10 +117,20 @@ exports.validateCreateRoom = [
         .withMessage("Room name must be between 3 and 50 characters")
         .trim()
         .custom(async (value) => {
-            const room = await roomModel.find("roomName", value);
-
+            const room = await roomModel.find("name", value);
             if (room) {
                 throw new Error("room name is already exist");
             }
         }),
+];
+
+exports.validateRoomJoin = [
+    param("roomId").custom(async (value, { req }) => {
+        const room = await roomModel.find("name", value);
+        if (!room) {
+            throw new Error("there is no room with this name");
+        }
+        req.room = room;
+        return true;
+    }),
 ];
